fix: avoid Code Quality false positives (#32)